cargo-features = ["resolver"]

[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.7.4"
thiserror = "1.0.24"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
arrayref = "0.3.6"
zeroize = "=1.3.0"

[lib]
crate-type = ["cdylib", "lib"]
